inst/module-navigation/module-navigation.css
.teal-modules-wrapper .module-button,
.teal-modules-tree .module-group-label {
  --bs-nav-link-padding-x: 0.5rem;
  --bs-nav-link-padding-y: 0.25rem;
}

.teal-modules-wrapper .module-button {
  margin: 2px;
  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
  border: 1px solid var(--bs-primary-border-subtle);
  border-radius: 12px;
  background: white;
  color: var(--bs-primary);
  display: inline-flex;
}

.teal-modules-wrapper .module-button:hover {
  background: var(--bs-primary-border-subtle);
}

.teal-modules-wrapper .module-button.active {
  color: var(--bs-btn-active-color);
  background: var(--bs-btn-active-bg);
  border-color: var(--bs-btn-active-border-color);
}

.teal-modules-wrapper .dropdown.nav-item-custom {
  border-bottom: 2px solid #4dabf7;
}

.nav-item-custom > .dropdown-menu {
  opacity: 0;
  transform: scale(0.8, 0.8);
  transform-origin: top left;
  transition: opacity 0.18s cubic-bezier(0.4, 0, 0.2, 1),
    transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
  display: block;
  pointer-events: none;
}

.nav-item-custom.dropdown.show > .dropdown-menu {
  opacity: 1;
  transform: scaleY(1);
  pointer-events: auto;
}

.teal-modules-wrapper .dropdown-menu {
  z-index: 1046;
  width: 700px;
  max-width: calc(100vw - 2rem);
  max-height: 80vh;
  padding: 1.5rem;
  overflow-y: auto;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
  border: 1px solid #dee2e6;
  border-radius: 8px;
}

.teal-modules-wrapper .dropdown-toggle {
  padding: 10px;
}

.teal-modules-tree ul {
  margin-left: 1.25rem;
  padding-left: 0;
}

.teal-modules-tree li {
  list-style: none;
  margin: 0.5rem 0;
  position: relative;
}

.teal-modules-tree li::before {
  content: "";
  position: absolute;
  top: -1rem;
  left: -1.25rem;
  border-left: 1px solid var(--bs-border-color);
  border-bottom: 1px solid var(--bs-border-color);
  width: 1.25rem;
  height: 2rem;
}

.teal-modules-tree li::after {
  content: "";
  position: absolute;
  top: 0.6875rem;
  left: -1.25rem;
  border-left: 1px solid var(--bs-border-color);
  width: 1px;
  height: 100%;
}

.teal-modules-tree li:last-child::after {
  display: none;
}

.teal-modules-tree li:hover::before,
.teal-modules-tree li:hover::after {
  border-color: var(--bs-primary);
}

.teal-modules-tree .module-group-label {
  margin-left: 0 !important;
  font-weight: bold;
  color: var(--bs-secondary);
  border: 1px solid #dee2e6;
  border-radius: 12px;
  padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
  display: inline-block;
}

